--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="loader">
       </div>
     </div>
-    <img class="logo" src="./img/logo.png" width="300px" height="180px" alt="">
+    <img class="logo" src="./img/logo.png"alt="">
     <nav id="nav">
       <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
         aria-expanded="false">Menu
